test/corpus/module_functions.txt
============
Module function zero arity function
============

def test do
end

---

(source_file (def (variable) (do_block)))

============
Module function zero arity function with parens
============

def test() do
end

---

(source_file (def (variable) (do_block)))

============
Module function single arity function
============

def test(name) do
end

---

(source_file (def (variable) (variable) (do_block)))

============
Module function plural arity function
============

def test(first_name, last_name) do
end

---

(source_file (def (variable) (variable) (variable) (do_block)))

============
Module function short hand function
============

def test(), do: "Hello world"

---

(source_file (def (variable) (do_block (string))))

============
Module function with guard clause
============

def test(first_name, last_name) when is_nil(first_name) do
  "a simpler test"
end

---

(source_file (def (variable) (variable) (variable) (guard_clause (function_call (computed_function_name (variable)) (variable))) (do_block (string))))
